service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: test
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-node
  sessionAffinity: None
  type: LoadBalancer
